# flatmap

./: Cargo.toml  README.md
src/: lib.rs  map.rs  set.rs
tests/: integration_tests.rs
